# IFUTR

./: .ipas.yaml.swp  2019_2_7_Anch-3000_Test-1500_1500_100.csv  2019_2_7_Anch-3000_Test-1500_1500_1225.csv  2019_2_7_Anch-3000_Test-1500_2500_1225.csv  2019_2_7_Anch-3000_Test-1500_500_1225.csv  2019_2_7_Anch-3000_Test-2500_1500_2025.csv  2019_2_7_Anch-3000_Test-2500_500_100.csv  2019_2_7_Anch-3000_Test-2500_500_1225.csv  2019_2_7_Anch-3000_Test-500_500_100.csv  2019_2_7_Anch-3000_Test-500_500_1225.csv  LICENSE  README.txt  ipas.yaml  viconreader_new.py
ifutr/: CMakeLists.txt  package.xml
ifutr/msg/: Pozyx_Accel.msg  Pozyx_Pose.msg
ifutr/scripts/: command.py  uav.py  ugv.py
ifutr/scripts/actuators/: motor.py
ifutr/scripts/flightController/: README.txt  fakeGPS.py  offb_node.cpp  rangefinder.py
ifutr/scripts/localization/: IPozyx.py  IPozyx2.py  csv_fix.py  generate_report.py  localization_csv_handler.py  localization_statistics.py  localization_statistics2.py  ready_to_localize.py
ifutr/scripts/localization/reports/: Gpytest.py  README.txt  generate_DataMap.py  generate_Heat.py  generate_Table.py  generate_graphs.py  testGP.py
ifutr/scripts/localization/reports/CSV/ungenerated/: 2019_2_11_Anch-0_Test-0_0_0.csv  2019_2_12_Anch-0_Test-0_0_0.csv  2019_2_12_Anch-5000_Test-1500_1500_10.csv  2019_2_12_Anch-5000_Test-1500_1500_1225.csv  2019_2_12_Anch-5000_Test-1500_1500_2025.csv  2019_2_12_Anch-5000_Test-1500_2500_10.csv  2019_2_12_Anch-5000_Test-1500_2500_1225.csv  (+442 more)
ifutr/scripts/sensors/: GPS.py  Pozyx.py  Pozyx_GPS.py  encoder.py  rangefinder.py
(+25 files in other folders)
